# php-parser-py

./: .gitignore  README.md  context7.json  pyproject.toml  pytest.ini
docs/: api_demo.ipynb  design.md  idea.md  todo.md
docs/libs/: cpg2py.md  cpg2py_traversal.md  php_parser_ast.md
examples/: transform_variable.py
scripts/: generate_ast_docs.py  quick_release.sh  release.sh
src/php_parser_py/: __init__.py  _ast.py  _edge.py  _exceptions.py  _modifier.py  _node.py  _parser.py  _printer.py  _resources.py  _runner.py  exceptions.py
src/php_parser_py/scripts/: parse.php  print.php
tests/: conftest.py  test_ast.py  test_edge.py  test_integration.py  test_modifier.py  test_node.py  test_parser.py  test_printer.py
tests/fixtures/: function.php  simple.php
