[project]
name = "php-parser-py"
version = "1.1.0"
description = "Python wrapper for PHP-Parser using cpg2py"
readme = "README.md"
authors = [
    { name = "samhsu-dev", email = "yxu166@jh.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "cpg2py>=1.1.0",
    "static-php-py",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
# Include resources directory in package data
source-include = ["resources/*.zip"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
