[project]
name = "php-parser-py"
version = "1.2.1"
description = "Python wrapper for PHP-Parser using cpg2py"
readme = "README.md"
authors = [
    { name = "samhsu-dev", email = "yxu166@jh.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "cpg2py>=1.2.0",
    "static-php-py",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
# Include resources directory in package data
source-include = ["resources/*.zip"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "mypy>=1.13.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]

[tool.pylint.messages_control]
disable = [
    "wrong-import-position",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "invalid-name",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
allow_subclassing_any = true

[[tool.mypy.overrides]]
module = ["cpg2py", "cpg2py.*", "static_php_py", "static_php_py.*"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
